# last30days-skill

./: AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTORS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml  security.yml  validate.yml
hooks/scripts/: check-config.sh
skills/last30days/: SKILL.md
skills/last30days/references/: save-html-brief.md
skills/last30days/scripts/: last30days.py  store.py  sync.sh
skills/last30days/scripts/lib/: env.py  pipeline.py  planner.py  quality_nudge.py  render.py  schema.py  setup_wizard.py
tests/: test_bird_x.py  test_cli_v3.py  test_doc_flag_contract.py  test_github_device_auth.py  test_html_save_contract.py  test_last_run_state.py  test_onboarding_contract.py  test_pipeline_v3.py  test_project_config_trust.py  test_store.py  test_watchlist_commands.py
