[project]
name = "last30days-skill"
version = "3.2.0"
description = "Multi-source last-30-days research skill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32,<3",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-q",
  "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["skills/last30days/scripts", "tests"]
omit = [
  "skills/last30days/scripts/lib/vendor/*",
  "dist/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
  "skills/last30days/scripts/lib/vendor/*",
  "dist/*",
]
