[project]
name = "last30days-skill"
version = "3.8.3"
description = "Multi-source last-30-days research skill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.1.0,<10",
  "pytest-cov>=7,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-q",
  "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["skills/last30days/scripts", "tests"]
omit = [
  "skills/last30days/scripts/lib/vendor/*",
  "dist/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Coverage gate (issue #254). 60% floor — intended to rise over time, not a ceiling.
# Baseline measured 2026-06-25 (source = scripts + tests): TOTAL 84%; core modules
# pipeline.py 69%, render.py 76%, schema.py 94%. Gate kept at the 60% floor for headroom.
# Do not lower without documenting why in the PR (see AGENTS.md Rules).
fail_under = 60
omit = [
  "skills/last30days/scripts/lib/vendor/*",
  "dist/*",
]
